manifests/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
  annotations:
    external-dns.kubernetes.io/hostname: jelly.yornik.eu
    external-dns.kubernetes.io/target: jump.fedishark.eu
    external-dns.kubernetes.io/ttl: "3600"
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: http
      protocol: TCP
      name: http
