manifests/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jelly.fedishark.eu`) && PathPrefix(`/Users/AuthenticateByName`)
      kind: Rule
      priority: 10
      middlewares:
        - name: fail2ban
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`jelly.fedishark.eu`)
      kind: Rule
      priority: 1
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: letsencrypt
